# IntePLAs

./: CMakeLists.txt  Dockerfile  NOTE.md  README.md  Toolchain-mingw.cmake  app  build.sh  callgrind.out.4858  gmon.out  main  main.cpp
Core/: Camera.hpp  Cube.hpp  Display.hpp  GameObject.hpp  Main.hpp  Math.hpp  Mesh.hpp  OpenGL.hpp  Physics.hpp  State.hpp  Type.hpp
Developement/Color palettes/: UI_Color_palette.md
Developement/Game mechanics/Electronics/: Led.txt  Shaders.txt  Transistor.txt
Developement/Plans/: To-do.txt
Scripts/: build_g++_linux.sh  build_g++_windows.sh  generateDistributionFiles.sh  install.sh  run_linux.sh
exec/: compile-debug.sh  compile.sh
json/: graphicssettings.json  physicssettings.json  soundsettings.json  storagesettings.json  worldconfig.json  worldgenerate.json
res/: conf.json
res/img/Player/: ddeessrrtt.pxo  (+1 more)
res/shaders/: blur_fragment.glsl  desaturate_fragment.glsl  explosion_fragment.glsl  imageBlur.glsl  nuke.glsl  treshold_fragment.glsl
res/text/: splashes.txt
res/themes/: nanogui.style
res/ui/: settings_menu.txt  start_menu.txt
res/world/: untitled.pxo
src/: Acid.hpp  AddVoxelGroups.hpp  Background.hpp  BackgroundMusic.hpp  Backpack.hpp  BarUI.hpp  Biome.hpp  Blood.hpp  BurnedMaterial.hpp  Burning.hpp  Butane.hpp  Button.hpp  Camera.hpp  Chlorine.hpp  Chunk.hpp  ChunkIndexerVoxelContainer.hpp  ClearWeather.hpp  ClientManager.hpp  Collider.hpp  CollisionManager.hpp  Controls.hpp  CreativeState.cpp  CreativeState.hpp  Cursor.hpp  DamageState.hpp  DeadState.hpp  DeadUIState.hpp  DebrisParticle.hpp  DebugDisplay.hpp  DefaultGameEvent.hpp  Desert.hpp  Dispawner.hpp  EffectOverlay.hpp  ElectricComponent.hpp  ElectricityGlobal.hpp  ElectricitySimulation.cpp  ElectricitySimulation.hpp  Element.hpp  Elements.hpp  Entity.hpp  (+189 more)
src/Biome/: Biome.hpp  Forest.hpp  Ocean.hpp
src/BitmapText/: BitmapText.hpp
src/Elements/: Acid.hpp  BurnedMaterial.hpp  Chlorine.hpp  Element.hpp  Flammable.hpp  FlammableFluid.hpp  FlammableGas.hpp  Gas.hpp  GravityElement.cpp  GravityElement.hpp  GravityFluid.hpp  MoltenMetal.hpp  Nitroglycerin.hpp  Sand.hpp  SandMaterial.hpp  Snow.hpp  Water.hpp  Wood.hpp
src/GUI/: Button.cpp  Button.hpp  Inventory.hpp
src/Graphics/: VertexSprite.hpp
src/InfoBar/: HealthBar.hpp  HungerBar.hpp
src/Item/: Backpack.hpp  DebugPlacer.hpp  GeigerCounter.hpp  Gun.hpp  Item.hpp  Jetpack.cpp  Jetpack.hpp  Laser.hpp  NoneItem.hpp  Pickaxe.hpp  PlaceItem.hpp  RocketLauncher.hpp
src/Lighting/: LightGlobal.hpp  LightSimulation.cpp  LightSimulation.hpp
src/Main-state/: GameState.cpp  GameState.hpp  Menustate.hpp  SettingsState.hpp  State.hpp  StateManager.hpp
src/Mob/: Mob.cpp  Mob.hpp
src/Mods/: CustomGameMod.hpp  HeistMod.hpp  Mods.hpp
src/Networking/: ClientUDP.hpp  NetworkingManagerUDP.hpp  ServerUDP.hpp  Test.cpp  UDPObject.hpp  main
src/Palettes/: PaletteUI.hpp
src/Particle/: DebrisParticle.hpp  FireEffectParticle.hpp  FireParticle.hpp  FreeNeutron.hpp  Particle.hpp  PickableDebris.hpp  RainParticle.hpp  WeatherParticle.hpp
src/Player/: CreativeState.cpp  CreativeState.hpp  DamageState.hpp  DeadState.hpp  IdleState.cpp  IdleState.hpp  JumpState.hpp  Player.cpp  Player.hpp  PlayerDamageSoundType.hpp  PlayerGlobal.hpp  PlayerHealthManager.cpp  PlayerHealthManager.hpp  PlayerHungerManager.hpp  PlayerState.hpp  PlayerTemparatureManager.hpp  RespawnState.cpp  RespawnState.hpp  SwimState.cpp  SwimState.hpp  WalkState.cpp  WalkState.hpp
src/Sound/: BackgroundMusic.hpp  GameSoundManager.hpp  Sound.hpp  SoundFX.hpp
src/UI/: PointIndicator.hpp
src/Utils/: StringUtils.hpp
src/VoxelGroupPropeties/: InteractableObjectPropeties.hpp  VoxelGroupPropeties.hpp  VoxelGroupPropetiesHandler.hpp
src/VoxelWorld/: Voxel.hpp  VoxelManager.cpp  VoxelManager.hpp  math.hpp
src/output/: Game
(+35 files in other folders)
